
  * usr/share/petname/small/names.txt,
    usr/share/petname/large/adverbs.txt,
    usr/share/petname/medium/names.txt:
    - remove two words (gryphon, crawfish) that seem to have fallen out
      of the common database
    - remove word that has fallen out of the database (skillfully)
  * debian/control:
    - fix lintian errors
  * debian/compat:
    - bump compat

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 26 May 2017 14:50:54 -0500

petname (2.6-0ubuntu1) artful; urgency=medium

  * debian/tests/check_words, usr/share/petname/small/adjectives.txt:
    - added "funky"
    - enumerated tests
  * README.md:
    - fixup the markdown
  * README.md, usr/share/man/man1/petname.1:
    - more markdown syntax fixes
  * README.md, usr/share/man/man1/petname.1:
    - recommend pip3

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 26 May 2017 14:50:51 -0500

petname (2.5-0ubuntu1) yakkety; urgency=medium

  * === added directory icons, icons/icon.png, icons/petname_14.png,
    icons/petname_192.png, icons/petname_64.png, usr/bin/petname:
    - added an icon (a dog tag)
  * snapcraft.yaml:
    - add snapcraft build instructions
    - use binary builds, since we use the coreutils binaries
    - fix arch
    - add icon
  * icons/petname.png:
    - added icon

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 20 Aug 2016 07:33:09 -0500

petname (2.4-0ubuntu1) yakkety; urgency=medium

  * === added directory usr/share/petname/medium, === added symlink
    usr/share/petname/adjectives.txt, === added symlink
    usr/share/petname/adverbs.txt, === added symlink
    usr/share/petname/names.txt, debian/rules, debian/tests/check_words,
    === renamed directory usr/share/petname/complex =>
    usr/share/petname/large, === renamed directory
    usr/share/petname/easy => usr/share/petname/small, === target is
    usmall/adjectives.txt, === target is usmall/adverbs.txt, === target
    is usmall/names.txt, usr/bin/petname, usr/share/man/man1/petname.1,