@@ -2,7 +2,7 @@ Source: petname
 Section: admin
 Priority: optional
 Maintainer: Dustin Kirkland <kirkland@ubuntu.com>
-Build-Depends: debhelper, dict, liblingua-en-syllable-perl, dictd, dict-gcide, dict-wn, scowl, ispell, ienglish-common, iamerican
+Build-Depends: debhelper (>= 9), dict, liblingua-en-syllable-perl, dictd, dict-gcide, dict-wn, scowl, ispell, ienglish-common, iamerican
 Standards-Version: 4.0.0
 Homepage: http://launchpad.net/petname
 Vcs-Browser: http://bazaar.launchpad.net/~petname/petname/trunk/files
